# quasar

./: AUDIT_REPORT.md  AUDIT_SCOPE.md  AUTOMATED_AUDIT_REPORT.md  BRANCH_COMPARISON.md  DEEP_AUDIT_ACCOUNT.md  DEEP_AUDIT_DERIVE.md  DEEP_AUDIT_MASTER.md  DEEP_AUDIT_PDA.md  DEEP_AUDIT_REMAINING.md
cli/src/: cfg.rs  error.rs  idl.rs  init.rs  new.rs
core/tests/: account_validation.rs  cpi.rs  expansion.rs  miri.rs
derive/src/accounts/: fields.rs  init.rs  mod.rs
idl/src/: codegen_ts.rs
idl/src/codegen/: golang.rs  python.rs  rust.rs  typescript.rs
idl/src/parser/: mod.rs
idl/tests/: parser.rs
lang/: Cargo.toml
lang/src/: entrypoint.rs  lib.rs  pda.rs  traits.rs
semgrep_output/: rust_findings.json
spl/src/: lib.rs
tests/programs/test-pda/src/instructions/: init_max_multi_seeds.rs
tests/programs/test-token-cpi/src/: lib.rs
tests/programs/test-token-cpi/src/instructions/: mod.rs  sweep_token.rs
tests/programs/test-token-init/src/: lib.rs
tests/suite/src/: helpers.rs  lib.rs  test_init_mint_pda.rs  test_init_token_pda.rs  test_sweep.rs
