[package]
name = "quasar-lang"
description = "Zero-copy Solana program framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
debug = []
off-chain-pda = ["curve25519-dalek"]

[dependencies]
quasar-derive = { version = "0.0", path = "../derive" }
quasar-pod = { version = "0.0", path = "../pod" }
const-crypto = "0.3.0"
solana-program-error = "3.0.0"
solana-account-view = "2.0.0"
solana-address = { version = "2.2.0", features = ["wincode", "decode", "copy"] }
solana-instruction-view = { version = "2.0.0", features = ["cpi"] }
solana-program-log = "1.0.0"
sha2 = { version = "0.10", default-features = false }
curve25519-dalek = { version = "4.1", optional = true, default-features = false }

[target.'cfg(any(target_os = "solana", target_arch = "bpf"))'.dependencies]
solana-define-syscall = { version = "5.0.0", features = [
    "unstable-static-syscalls",
] }

[target.'cfg(not(any(target_os = "solana", target_arch = "bpf")))'.dependencies]
quasar-pod = { version = "0.0", path = "../pod", features = ["wincode"] }
solana-instruction = "3.2.0"
wincode = { version = "0.4", features = ["derive"] }

[dev-dependencies]
trybuild = "1"
